--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ h1{
 .form-select{
     height: 40px;
     width: 300px;
-    border: 2px solid black;
+    border: 4px solid black;
     margin-left: 10px;
     margin-right: 10px;
+    border-radius: 10px;
 }
 
 h3{
@@ -37,8 +38,10 @@ h3{
     height: 380px;
     width: 286px;
 }
+.li{
+    margin-right: 50px;
+}
 
-/* .cardfinal{
-    width: 500px;
-    height: 400px;
-} */
+.carousel slide{
+    height: 600px;
+}
